# test-pypi-packaging

./: README.md
packaging-tutorial-setuptools/: pyproject.toml
packaging_tutorial/: README.md  pyproject.toml
