[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_ryandaydev"
version = "0.0.1"
authors = [
  { name="Ryan D", email="ryand@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Ryandaydev/test-pypi-packaging"
Issues = "https://github.com/Ryandaydev/test-pypi-packaging/issues"